--- a/src/Assets/login.css
+++ b/src/Assets/login.css
@@ -9,7 +9,7 @@
     justify-content: center;
     align-items: center;
     min-height: 100vh;
-    background: url(login_background.jpg) no-repeat;
+    background: url(login_background.gif) no-repeat;
     background-size: cover;
     background-position: center;
   }
